FIX product text overflow

--- a/FE/src/eshop/products/product/product.component.css
+++ b/FE/src/eshop/products/product/product.component.css
@@ -28,9 +28,9 @@ a.product-image img {
 
 h2 {
   font-size: 18px;
-  /*white-space: nowrap;*/
+  white-space: nowrap;
   /*!*overflow: hidden;*!*/
-  /*text-overflow: ellipsis;*/
+  text-overflow: ellipsis;
   /*max-width: 200px;*/
   font-weight: 800;
   text-align: center;
